--- a/index.html
+++ b/index.html
@@ -244,29 +244,29 @@
                               <div class="form-group">
                                   <!-- Name input-->
                                   <input class="form-control" id="name" type="text" placeholder="Name *" data-sb-validations="required" />
-                                  <div class="invalid-feedback" data-sb-feedback="name:required">Please share your name.</div>
+                                  <div class="invalid-feedback" data-sb-feedback="name:required">Name * is required.</div>
                               </div>
                               <div class="form-group">
                                   <!-- Email address input-->
                                   <input class="form-control" id="email" type="email" placeholder="Email *" data-sb-validations="required,email" />
-                                  <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                                  <div class="invalid-feedback" data-sb-feedback="email:email">Please enter valid email address.</div>
+                                  <div class="invalid-feedback" data-sb-feedback="email:required">Email * is required.</div>
+                                  <div class="invalid-feedback" data-sb-feedback="email:email">Email * Email is not valid.</div>
                               </div>
                               <div class="form-group">
                                   <!-- Company input-->
-                                  <input class="form-control" id="name" type="text" placeholder="Company *" data-sb-validations="required" />
-                                  <div class="invalid-feedback" data-sb-feedback="name:required">Please share your company name.</div>
+                                  <input class="form-control" id="company" type="text" placeholder="Company *" data-sb-validations="required" />
+                                  <div class="invalid-feedback" data-sb-feedback="company:required">Company * is required.</div>
                               </div>
                               <div class="form-group mb-md-0">
                                   <!-- Phone number input-->
-                                  <input class="form-control" id="phone" type="tel" placeholder="Phone (Optional)" data-sb-validations="optional" />
+                                  <input class="form-control" id="phoneOptional" type="text" placeholder="Phone (Optional)" data-sb-validations="" />
                               </div>
                           </div>
                           <div class="col-md-6">
                               <div class="form-group form-group-textarea mb-md-0">
                                   <!-- Message input-->
-                                  <textarea class="form-control" id="message" placeholder="Briefly Describe your Project *" data-sb-validations="required"></textarea>
-                                  <div class="invalid-feedback" data-sb-feedback="message:required">Please provide some project information.</div>
+                                  <textarea class="form-control" id="brieflyDescribeYourProject" type="text" placeholder="Briefly Describe your Project *" style="height: 10rem;" data-sb-validations="required"></textarea>
+                                  <div class="invalid-feedback" data-sb-feedback="brieflyDescribeYourProject:required">Briefly Describe your Project * is required.</div>
                               </div>
                           </div>
                       </div>
