resized message submission box

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                           <div class="col-md-6">
                               <div class="form-group form-group-textarea mb-md-0">
                                   <!-- Message input-->
-                                  <textarea class="form-control" id="brieflyDescribeYourProject" type="text" placeholder="Briefly Describe your Project *" style="height: 10rem;" data-sb-validations="required"></textarea>
+                                  <textarea class="form-control" id="brieflyDescribeYourProject" type="text" placeholder="Briefly Describe your Project *" data-sb-validations="required"></textarea>
                                   <div class="invalid-feedback" data-sb-feedback="brieflyDescribeYourProject:required">Briefly Describe your Project * is required.</div>
                               </div>
                           </div>
