updated branding, site structure, formatting

--- a/index.html
+++ b/index.html
@@ -61,8 +61,17 @@
                             <i class="fas fa-landmark fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">E2E Wireless Architecture</h4>
-                        <p class="text-muted" style="font-style: italic;">End to End system design and integration; <br> from initial requirements to deployment.
+                        <p class="text-muted" style="font-style: italic;">End to End system design and integration; from initial requirements to deployment.
                         </p>
+                        <div class="col-auto">
+                          <h5 class="section-subheading">Capabilities</h5>
+                          <ul style="display: inline-block; text-align: left;">
+                            <li>Wireless system architecture & design</li>
+                            <li>RF planning and propagation modeling</li>
+                            <li>Network protocol selection and integration</li>
+                            <li>Embedded Subsystem Network | Cloud Communication interface design</li>
+                          </ul>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -70,7 +79,18 @@
                             <i class="fas fa-satellite-dish fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Hardware Engineering</h4>
-                        <p class="section-subheading text-muted" style="font-style: italic;">Tailored wireless hardware solutions.
+                        <p class="section-subheading text-muted" style="font-style: italic;">Tailored wireless hardware solutions.</p>
+                        <div class="col-auto">
+                          <h5 class="section-subheading">Capabilities</h5>
+                          <ul style="text-align: left;">
+                            <li>PCB design for wireless modules</li>
+                            <li>RF layout optimization</li>
+                            <li>Antenna selection, mechanical integration, impedance tuning, and testing</li>
+                            <li>Rapid prototyping (dev boards, EVKs)</li>
+                            <li>Validation for harsh or mobile environments</li>
+                            <li>Schematic review &amp; DFM/DFA guidance</li>
+                          </ul>
+                        </div>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -79,41 +99,19 @@
                         </span>
                         <h4 class="my-3">Scaleable Operation Strategies</h4>
                         <p class="text-muted" style="font-style: italic;">Building robust, scalable strategies for <br> deploying and managing connected products.</p>
+                        <div class="col-auto">
+                          <h5 class="section-subheading">Capabilities</h5>
+                          <ul style="text-align: left;">
+                            <li>eUICC/eSIM profile management and Mobile Network Operator(MNO) relationships</li>
+                            <li>Company and product onboarding with MNOs</li>
+                            <li>Connectivity provisioning &amp; lifecycle strategies</li>
+                            <li>Remote diagnostics, connectivity monitoring, fleet analytics, and OTA updates</li>
+                            <li>Transitioning service plans and product classifications from prototype to mass production</li>
+                            <li>Cloud integration for connected product analytics</li>
+                            <li>Compliance and certification support (e.g., FCC, PTCRB/GCF, MNO Performance)</li>
+                          </ul>
+                      </div>
                     </div>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                      <h5 class="section-subheading">Capabilities</h5>
-                      <ul style="display: inline-block; text-align: left;">
-                        <li>Wireless system architecture & design</li>
-                        <li>RF planning and propagation modeling</li>
-                        <li>Network protocol selection and integration</li>
-                        <li>Embedded Subsystem Network | Cloud Communication interface design</li>
-                      </ul>
-                    </div>
-                    <div class="col-md-4">
-                      <h5 class="section-subheading">Capabilities</h5>
-                      <ul style="text-align: left;">
-                        <li>PCB design for wireless modules</li>
-                        <li>RF layout optimization</li>
-                        <li>Antenna selection, mechanical integration, impedance tuning, and testing</li>
-                        <li>Rapid prototyping (dev boards, EVKs)</li>
-                        <li>Validation for harsh or mobile environments</li>
-                        <li>Schematic review &amp; DFM/DFA guidance</li>
-                      </ul>
-                    </div>
-                    <div class="col-md-4">
-                      <h5 class="section-subheading">Capabilities</h5>
-                      <ul style="text-align: left;">
-                        <li>eUICC/eSIM profile management and Mobile Network Operator(MNO) relationships</li>
-                        <li>Company and product onboarding with MNOs</li>
-                        <li>Connectivity provisioning &amp; lifecycle strategies</li>
-                        <li>Remote diagnostics, connectivity monitoring, fleet analytics, and OTA updates</li>
-                        <li>Transitioning service plans and product classifications from prototype to mass production</li>
-                        <li>Cloud integration for connected product analytics</li>
-                        <li>Compliance and certification support (e.g., FCC, PTCRB/GCF, MNO Performance)</li>
-                      </ul>
-                  </div>
                 </div>
             </div>
         </section>
@@ -125,19 +123,20 @@
                     <h2 class="section-heading text-uppercase">About</h2>
 
                     <div class="text-center">
-                      <p class="section-subheading text-muted" style="font-style: italic;">Whatever your stage of the design process, <u>we meet you where you're at</u>.</p>
+                      <p class="section-subheading text-muted" style="font-style: italic;">Whatever your stage of the design process, <br><u>we meet you where you're at</u></p>
                     </div>
-                    <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
-                    <p>
-                      <b>Strata Wireless leads with a Systems Engineering approach, ensuring the proper wireless systems are built for your business needs.<br>
-                      From initial concept to production deployment, our flexible approach ensures agility, depth of knowledge, and comprehensive lifecycle management.</b>
-                    </p>
-                  </div>
-
+                    <div class="container" style="padding-top: 2rem;">
+                      <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
+                      <p>
+                        Strata Wireless leads with a Systems Engineering approach, ensuring the proper wireless systems are built for your business needs.<br><br>
+                        From initial concept to production deployment, our flexible approach ensures agility, depth of knowledge, and comprehensive lifecycle management.
+                      </p>
+                      </div>
+                    </div>
                 </div>
             </div>
             <div class="container">
-                <ul class="timeline">
+                <ul class="timeline" style="padding-top: 5rem;">
                     <li>
                         <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/customer_experience.png" alt="..." /></div>
                         <div class="timeline-panel">
@@ -218,8 +217,8 @@
                           </div>
                           <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
                           <p>
-                          <b>We leverage a trusted network of specialized engineers and consultants—enabling us to scale capabilities and bring the right expertise to each project.<br>
-                          The Strata Wireless team is local to the San Francisco Bay Area, but our partner network bridges many industries and regions around the US.</b></p>
+                          We leverage a trusted network of specialized engineers and consultants—enabling us to scale capabilities and bring the right expertise to each project.<br><br>
+                          The Strata Wireless team is local to the San Francisco Bay Area, but our partner network bridges many industries and regions around the US.</p>
                         </div>
                       </div>
                   </div>
