--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="col-auto">
                           <h5 class="section-subheading">Capabilities</h5>
                           <ul style="display: inline-block; text-align: left;">
-                            <li>Wireless system architecture & design</li>
+                            <li>Wireless system architecture &amp design</li>
                             <li>RF planning and propagation modeling</li>
                             <li>Network protocol selection and integration</li>
                             <li>Embedded Subsystem Network | Cloud Communication interface design</li>
@@ -125,13 +125,23 @@
                     <div class="text-center">
                       <p class="section-subheading text-muted" style="font-style: italic;">Whatever your stage of the design process, <br><u>we meet you where you're at</u></p>
                     </div>
-                    <div class="container" style="padding-top: 2rem;">
-                      <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
-                      <p>
-                        Strata Wireless leads with a Systems Engineering approach, ensuring the proper wireless systems are built for your business needs.<br><br>
-                        From initial concept to production deployment, our flexible approach ensures agility, depth of knowledge, and comprehensive lifecycle management.
-                      </p>
-                      </div>
+                    <div class="row justify-content-center">
+                        <div class="container" style="padding-top: 2rem; max-width:60%">
+                          <div style="background-color: #fff2b7; padding: 15px; border-radius: 15px; text-align: center;">
+                          <p>
+                            Strata Wireless leads with a Systems Engineering approach, ensuring the proper wireless systems are built for your business needs.
+                          </p>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="container" style="padding-top: 2rem; max-width:60%">
+                          <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
+                          <p>
+                            From initial concept to production deployment, our flexible approach ensures agility, depth of knowledge, and comprehensive lifecycle management.
+                          </p>
+                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -212,14 +222,27 @@
                           <div class="team-member">
                               <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                               <h4>Kurt VonEhr</h4>
-                              <p class="text-muted">Founder</p>
+                              <p class="text-muted">Founder<br>Principal Wireless Consultant</p>
                               <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kvonehr/" aria-label="Kurt VonEhr LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                           </div>
-                          <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
-                          <p>
-                          We leverage a trusted network of specialized engineers and consultants—enabling us to scale capabilities and bring the right expertise to each project.<br><br>
-                          The Strata Wireless team is local to the San Francisco Bay Area, but our partner network bridges many industries and regions around the US.</p>
-                        </div>
+                          <div class="row justify-content-center">
+                              <div class="container" style="padding-top: 2rem; max-width:60%">
+                                <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
+                                <p>
+                                  We leverage a trusted network of specialized engineers and consultants—enabling us to scale capabilities and bring the right expertise to each project.
+                                </p>
+                                </div>
+                              </div>
+                          </div>
+                          <div class="row justify-content-center">
+                              <div class="container" style="padding-top: 2rem; max-width:60%">
+                                <div style="background-color: #fff2b7; padding: 15px; border-radius: 15px; text-align: center;">
+                                <p>
+                                  The Strata Wireless team is local to the San Francisco Bay Area, but our partner network bridges many industries and regions around the US.</p>
+                                </p>
+                                </div>
+                              </div>
+                          </div>
                       </div>
                   </div>
 
