--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Kurt VonEhr" />
         <title>Strata Wireless</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/brand.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -127,7 +127,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="container" style="padding-top: 2rem; max-width:60%">
-                          <div style="background-color: #fff2b7; padding: 15px; border-radius: 15px; text-align: center;">
+                          <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
                           <p>
                             Strata Wireless leads with a Systems Engineering approach, ensuring the proper wireless systems are built for your business needs.
                           </p>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="container" style="padding-top: 2rem; max-width:60%">
-                          <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
+                          <div style="background-color: #fff0ad; padding: 15px; border-radius: 15px; text-align: center;">
                           <p>
                             From initial concept to production deployment, our flexible approach ensures agility, depth of knowledge, and comprehensive lifecycle management.
                           </p>
@@ -227,7 +227,7 @@
                           </div>
                           <div class="row justify-content-center">
                               <div class="container" style="padding-top: 2rem; max-width:60%">
-                                <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
+                                <div style="background-color: #fff0ad; padding: 15px; border-radius: 15px; text-align: center;">
                                 <p>
                                   We leverage a trusted network of specialized engineers and consultants—enabling us to scale capabilities and bring the right expertise to each project.
                                 </p>
@@ -236,7 +236,7 @@
                           </div>
                           <div class="row justify-content-center">
                               <div class="container" style="padding-top: 2rem; max-width:60%">
-                                <div style="background-color: #fff2b7; padding: 15px; border-radius: 15px; text-align: center;">
+                                <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
                                 <p>
                                   The Strata Wireless team is local to the San Francisco Bay Area, but our partner network bridges many industries and regions around the US.</p>
                                 </p>
