Updated margins and colors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="margin-bottom: 3rem;">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-landmark fa-stack-1x fa-inverse"></i>
@@ -73,7 +73,7 @@
                           </ul>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" style="margin-bottom: 3rem;">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-satellite-dish fa-stack-1x fa-inverse"></i>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="container" style="padding-top: 2rem; max-width:60%">
-                          <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
+                          <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center; border: 1px solid lightgrey;">
                           <p>
                             Strata Wireless leads with a Systems Engineering approach, ensuring the proper wireless systems are built for your business needs.
                           </p>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="container" style="padding-top: 2rem; max-width:60%">
-                          <div style="background-color: #fff0ad; padding: 15px; border-radius: 15px; text-align: center;">
+                          <div style="background-color: #fff6d7; padding: 15px; border-radius: 15px; text-align: center; border: 1px solid lightgrey;">
                           <p>
                             From initial concept to production deployment, our flexible approach ensures agility, depth of knowledge, and comprehensive lifecycle management.
                           </p>
@@ -226,17 +226,17 @@
                               <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/kvonehr/" aria-label="Kurt VonEhr LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
                           </div>
                           <div class="row justify-content-center">
-                              <div class="container" style="padding-top: 2rem; max-width:60%">
-                                <div style="background-color: #fff0ad; padding: 15px; border-radius: 15px; text-align: center;">
+                            <div class="container" style="padding-top: 0rem; max-width:60%; ">
+                              <div style="background-color: #fff6d7; padding: 15px; border-radius: 15px; text-align: center; border: 1px solid lightgrey;">
                                 <p>
                                   We leverage a trusted network of specialized engineers and consultants—enabling us to scale capabilities and bring the right expertise to each project.
                                 </p>
-                                </div>
+                              </div>
                               </div>
                           </div>
                           <div class="row justify-content-center">
                               <div class="container" style="padding-top: 2rem; max-width:60%">
-                                <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center;">
+                                <div style="background-color: #e6f2ff; padding: 15px; border-radius: 15px; text-align: center; border: 1px solid lightgrey;">
                                 <p>
                                   The Strata Wireless team is local to the San Francisco Bay Area, but our partner network bridges many industries and regions around the US.</p>
                                 </p>
