--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             <div class="container">
                 <div class="masthead-subheading">Connectivity by Design</div>
                 <div class="masthead-heading text-uppercase">let's collaborate</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Learn More</a>
+                <p><i>Design, develop, and validate your wireless embedded systems for applications ranging from IoT to Aerospace</i></p><br>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#contact">Contact Us</a>
             </div>
         </header>
 
