Updated tagline, again.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="masthead-subheading">Connectivity by Design</div>
                 <div class="masthead-heading text-uppercase">let's collaborate</div>
-                <p><i>Design, develop, and validate your wireless embedded systems with Strata Wireless - our clients range from early-stage IoT to complex automotive platforms.</i></p><br>
+                <p><i>Design, develop, and validate your wireless embedded systems with Strata Wireless - we help clients with early-stage IoT, advanced automotive platforms, and beyond.</i></p><br>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#contact">Contact Us</a>
             </div>
         </header>
