tagline design and phrasing, button color updates

--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
             <div class="container">
                 <div class="masthead-subheading">Connectivity by Design</div>
                 <div class="masthead-heading text-uppercase">let's collaborate</div>
-                <p><i>Design, develop, and validate your wireless embedded systems with Strata Wireless - we help clients with early-stage IoT, advanced automotive platforms, and beyond.</i></p><br>
+                <div class="row justify-content-center">
+                    <div class="container" style="padding-top: 2rem; padding-bottom: 2rem; max-width:80%">
+                      <div style="background-color: rgba(128, 128, 128, 0.3); padding: 15px; border-radius: 15px; text-align: center; border: 1px solid lightgrey;">
+                      <p>
+                        Strata Wireless is a consultancy that helps clients design, develop, and validate wireless embedded systems for IoT, automotive platforms, and beyond.
+                      </p>
+                      </div>
+                    </div>
+                </div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#contact">Contact Us</a>
             </div>
         </header>
