updated tagline and sections for about and process

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                           <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>-->
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#process">Process</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -46,9 +46,7 @@
                 <div class="row justify-content-center">
                     <div class="container" style="padding-top: 2rem; padding-bottom: 2rem; max-width:80%">
                       <div style="background-color: rgba(128, 128, 128, 0.3); padding: 15px; border-radius: 15px; text-align: center; border: 1px solid lightgrey;">
-                      <p>
-                        Strata Wireless is a consultancy that helps clients design, develop, and validate wireless embedded systems for IoT, automotive platforms, and beyond.
-                      </p>
+                      Strata Wireless helps clients design, develop, and validate wireless embedded systems for IoT, automotive platforms, and beyond.
                       </div>
                     </div>
                 </div>
@@ -126,13 +124,13 @@
         </section>
 
         <!-- About-->
-        <section class="page-section bg-light" id="about">
+        <section class="page-section bg-light" id="process">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
+                    <h2 class="section-heading text-uppercase">Our Process</h2>
 
                     <div class="text-center">
-                      <p class="section-subheading text-muted" style="font-style: italic;">Whatever your stage of the design process, <br><u>we meet you where you're at</u></p>
+                      <p class="section-subheading text-muted" style="font-style: italic;">Whatever stage of your design process, <br><u>we meet you where you're at</u></p>
                     </div>
                     <div class="row justify-content-center">
                         <div class="container" style="padding-top: 2rem; max-width:60%">
@@ -221,10 +219,10 @@
         </section>
 
         <!-- Team-->
-        <section class="page-section" id="team">
+        <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Team</h2>
+                    <h2 class="section-heading text-uppercase">About</h2>
 
                   <div class="row justify-content-center">
                     <div class="col-auto">
