--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <meta property="og:title" content="Strata Wireless" />
+        <meta property="og:description" content="Strata Wireless helps clients design, develop, and validate wireless embedded systems for IoT, automotive platforms, and beyond." />
+        <meta property="og:image" content="https://strata-wireless.com/logo-preview.png" />
+        <meta property="og:url" content="https://strata-wireless.com/" />
+        <meta property="og:type" content="website" />
     </head>
     <body id="page-top">
 
