updated url for logo preview

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <meta property="og:title" content="Strata Wireless" />
         <meta property="og:description" content="Strata Wireless helps clients design, develop, and validate wireless embedded systems for IoT, automotive platforms, and beyond." />
-        <meta property="og:image" content="https://strata-wireless.com/logo-preview.png" />
+        <meta property="og:image" content="https://strata-wireless.com/assets/logo-preview.png" />
         <meta property="og:url" content="https://strata-wireless.com/" />
         <meta property="og:type" content="website" />
     </head>
