--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-        <meta property="og:title" content="Strata Wireless" />
+        <meta property="og:title" content="Connectivity by Design" />
         <meta property="og:description" content="Strata Wireless helps clients design, develop, and validate wireless embedded systems for IoT, automotive platforms, and beyond." />
         <meta property="og:image" content="https://strata-wireless.com/assets/logo_new.png" />
         <meta property="og:url" content="https://strata-wireless.com/" />
