Updated company description

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <meta property="og:title" content="Connectivity by Design" />
-        <meta property="og:description" content="Strata Wireless helps clients design, develop, and validate wireless embedded systems for IoT, automotive platforms, and beyond." />
+        <meta property="og:description" content="Strata Wireless helps clients design, develop, and validate wireless systems for commercial and defense applications." />
         <meta property="og:image" content="https://strata-wireless.com/assets/logo_new.png" />
         <meta property="og:url" content="https://strata-wireless.com/" />
         <meta property="og:type" content="website" />
